// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileRelationQuery — ManyToMany > applies orderBy with table alias f for ManyToMany 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Course",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "name",
        "max": null,
        "min": null,
        "name": "name",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [
      {
        "findKeys": null,
        "foreignConstructor": [Function],
        "foreignKey": "students",
        "joinKeys": {
          "courseId": "id",
        },
        "joinTable": null,
        "key": "courses",
        "options": {},
        "orderBy": null,
        "type": "ManyToMany",
      },
    ],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "s-uuid",
  ],
  "relation": {
    "findKeys": null,
    "foreignConstructor": [Function],
    "foreignKey": "courses",
    "joinKeys": {
      "studentId": "id",
    },
    "joinTable": "course_student",
    "key": "students",
    "options": {},
    "orderBy": {
      "name": "DESC",
    },
    "type": "ManyToMany",
  },
  "text": "SELECT "f"."id", "f"."name", "j"."studentId" AS "__jt_studentId" FROM "app"."Course" AS "f" INNER JOIN "app"."course_student" AS "j" ON "j"."courseId" = "f"."id" WHERE "j"."studentId" IN ($1) ORDER BY "f"."name" DESC",
}
`;

exports[`compileRelationQuery — ManyToMany > compiles a basic ManyToMany query with INNER JOIN on join table 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Course",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "name",
        "max": null,
        "min": null,
        "name": "name",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [
      {
        "findKeys": null,
        "foreignConstructor": [Function],
        "foreignKey": "students",
        "joinKeys": {
          "courseId": "id",
        },
        "joinTable": null,
        "key": "courses",
        "options": {},
        "orderBy": null,
        "type": "ManyToMany",
      },
    ],
  },
  "include": {
    "relation": "students",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "student-uuid-1",
  ],
  "relation": {
    "findKeys": null,
    "foreignConstructor": [Function],
    "foreignKey": "courses",
    "joinKeys": {
      "studentId": "id",
    },
    "joinTable": "course_student",
    "key": "students",
    "options": {},
    "orderBy": null,
    "type": "ManyToMany",
  },
  "text": "SELECT "f"."id", "f"."name", "j"."studentId" AS "__jt_studentId" FROM "app"."Course" AS "f" INNER JOIN "app"."course_student" AS "j" ON "j"."courseId" = "f"."id" WHERE "j"."studentId" IN ($1)",
}
`;

exports[`compileRelationQuery — ManyToMany > includes join table root pk alias columns in SELECT 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Course",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "name",
        "max": null,
        "min": null,
        "name": "name",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [
      {
        "findKeys": null,
        "foreignConstructor": [Function],
        "foreignKey": "students",
        "joinKeys": {
          "courseId": "id",
        },
        "joinTable": null,
        "key": "courses",
        "options": {},
        "orderBy": null,
        "type": "ManyToMany",
      },
    ],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "s-uuid-1",
  ],
  "relation": {
    "findKeys": null,
    "foreignConstructor": [Function],
    "foreignKey": "courses",
    "joinKeys": {
      "studentId": "id",
    },
    "joinTable": "course_student",
    "key": "students",
    "options": {},
    "orderBy": null,
    "type": "ManyToMany",
  },
  "text": "SELECT "f"."id", "f"."name", "j"."studentId" AS "__jt_studentId" FROM "app"."Course" AS "f" INNER JOIN "app"."course_student" AS "j" ON "j"."courseId" = "f"."id" WHERE "j"."studentId" IN ($1)",
}
`;

exports[`compileRelationQuery — ManyToMany > uses findKeys when no inverse relation is found 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Tag",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "label",
        "max": null,
        "min": null,
        "name": "label",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "tags",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "article-1",
  ],
  "relation": {
    "findKeys": {
      "tagId": "id",
    },
    "foreignConstructor": [Function],
    "foreignKey": "articles",
    "joinKeys": {
      "articleId": "id",
    },
    "joinTable": "article_tag",
    "key": "tags",
    "options": {},
    "orderBy": null,
    "type": "ManyToMany",
  },
  "text": "SELECT "f"."id", "f"."label", "j"."articleId" AS "__jt_articleId" FROM "app"."Tag" AS "f" INNER JOIN "app"."article_tag" AS "j" ON "j"."tagId" = "f"."id" WHERE "j"."articleId" IN ($1)",
}
`;

exports[`compileRelationQuery — inverse (OneToMany) > adds orderBy clause when relation has orderBy 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Post",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "uuid-1",
  ],
  "relation": {
    "findKeys": {
      "authorId": "id",
    },
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": null,
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": {
      "title": "ASC",
    },
    "type": "OneToMany",
  },
  "text": "SELECT "id", "title", "author_id" FROM "app"."Post" WHERE "author_id" IN ($1) ORDER BY "title" ASC",
}
`;

exports[`compileRelationQuery — inverse (OneToMany) > applies select filter when include.select is set 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Post",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": [
      "id",
      "title",
    ],
    "strategy": "query",
    "where": null,
  },
  "params": [
    "uuid-1",
  ],
  "relation": {
    "findKeys": {
      "authorId": "id",
    },
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": null,
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "OneToMany",
  },
  "text": "SELECT "id", "title" FROM "app"."Post" WHERE "author_id" IN ($1)",
}
`;

exports[`compileRelationQuery — inverse (OneToMany) > compiles a basic inverse query with single root PK value 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Post",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "user-uuid-1",
  ],
  "relation": {
    "findKeys": {
      "authorId": "id",
    },
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": null,
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "OneToMany",
  },
  "text": "SELECT "id", "title", "author_id" FROM "app"."Post" WHERE "author_id" IN ($1)",
}
`;

exports[`compileRelationQuery — inverse (OneToMany) > compiles inverse query with multiple root PK values 1`] = `"SELECT "id", "title", "author_id" FROM "app"."Post" WHERE "author_id" IN ($1, $2, $3)"`;

exports[`compileRelationQuery — inverse (OneToMany) > does not add extra FK columns in SELECT when FK key is already in metadata fields 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Post",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "uuid-1",
  ],
  "relation": {
    "findKeys": {
      "authorId": "id",
    },
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": null,
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "OneToMany",
  },
  "text": "SELECT "id", "title", "author_id" FROM "app"."Post" WHERE "author_id" IN ($1)",
}
`;

exports[`compileRelationQuery — inverse (OneToMany) > includes extra FK columns in SELECT when FK key is not in metadata fields 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Post",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "uuid-1",
  ],
  "relation": {
    "findKeys": {
      "authorId": "id",
    },
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": null,
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "OneToMany",
  },
  "text": "SELECT "id", "title", "authorId" FROM "app"."Post" WHERE "authorId" IN ($1)",
}
`;

exports[`compileRelationQuery — inverse (OneToMany) > includes withDeleted filter when withDeleted is true 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Post",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "DeleteDate",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "deletedAt",
        "max": null,
        "min": null,
        "name": "deleted_at",
        "nullable": true,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "timestamp",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "uuid-1",
  ],
  "relation": {
    "findKeys": {
      "authorId": "id",
    },
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": null,
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "OneToMany",
  },
  "text": "SELECT "id", "title", "author_id", "deleted_at" FROM "app"."Post" WHERE "author_id" IN ($1) AND "deleted_at" IS NULL",
}
`;

exports[`compileRelationQuery — owning side (has joinKeys) > compiles owning-side query using foreign PK IN clause 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Author",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "author",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "author-uuid",
  ],
  "relation": {
    "findKeys": null,
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": {
      "authorId": "id",
    },
    "joinTable": null,
    "key": "author",
    "options": {},
    "orderBy": null,
    "type": "ManyToOne",
  },
  "text": "SELECT "id", "title", "author_id" FROM "app"."Author" WHERE "id" IN ($1)",
}
`;

exports[`compileRelationQuery — owning side (has joinKeys) > falls back to ctx.namespace when foreignMeta has no namespace 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Author",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "uuid-1",
  ],
  "relation": {
    "findKeys": null,
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": {
      "authorId": "id",
    },
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "ManyToOne",
  },
  "text": "SELECT "id", "title", "author_id" FROM "fallback_ns"."Author" WHERE "id" IN ($1)",
}
`;

exports[`compileRelationQuery — owning side (has joinKeys) > handles composite joinKeys with multiple pk values 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "CompositeEntity",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "companyId",
        "max": null,
        "min": null,
        "name": "company_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "userId",
        "max": null,
        "min": null,
        "name": "user_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "company-1",
    "user-1",
    "company-2",
    "user-2",
  ],
  "relation": {
    "findKeys": null,
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": {
      "companyId": "companyId",
      "userId": "userId",
    },
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "ManyToOne",
  },
  "text": "SELECT "company_id", "user_id" FROM "app"."CompositeEntity" WHERE ROW("company_id", "user_id") IN (($1, $2), ($3, $4))",
}
`;

exports[`compileRelationQuery — owning side (has joinKeys) > uses namespace from foreignMeta.entity when available 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Author",
      "namespace": "content",
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "uuid-1",
  ],
  "relation": {
    "findKeys": null,
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": {
      "authorId": "id",
    },
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "ManyToOne",
  },
  "text": "SELECT "id", "title", "author_id" FROM "content"."Author" WHERE "id" IN ($1)",
}
`;

exports[`compileRelationQuery — user-provided WHERE > appends compiled user WHERE condition to the query 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "Post",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": {
      "title": "Hello World",
    },
  },
  "params": [
    "uuid-1",
    "Hello World",
  ],
  "relation": {
    "findKeys": {
      "authorId": "id",
    },
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": null,
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "OneToMany",
  },
  "text": "SELECT "id", "title", "author_id" FROM "app"."Post" WHERE "author_id" IN ($1) AND "title" = $2",
}
`;

exports[`compileRelationQuery — version filtering > adds point-in-time version condition when versionTimestamp is set 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "VersionedPost",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "VersionStartDate",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "versionStartDate",
        "max": null,
        "min": null,
        "name": "version_start_date",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "timestamp",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "VersionEndDate",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "versionEndDate",
        "max": null,
        "min": null,
        "name": "version_end_date",
        "nullable": true,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "timestamp",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "uuid-1",
    2025-01-15T12:00:00.000Z,
  ],
  "relation": {
    "findKeys": {
      "authorId": "id",
    },
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": null,
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "OneToMany",
  },
  "text": "SELECT "id", "title", "author_id", "version_start_date", "version_end_date" FROM "app"."VersionedPost" WHERE "author_id" IN ($1) AND "version_start_date" <= $2 AND ("version_end_date" IS NULL OR "version_end_date" > $2)",
}
`;

exports[`compileRelationQuery — version filtering > adds versionEndDate IS NULL when foreignMeta has version fields and no timestamp 1`] = `
{
  "foreignMetadata": {
    "entity": {
      "comment": null,
      "decorator": "Entity",
      "name": "VersionedPost",
      "namespace": null,
    },
    "fields": [
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "id",
        "max": null,
        "min": null,
        "name": "id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "title",
        "max": null,
        "min": null,
        "name": "title",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "string",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "Field",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "authorId",
        "max": null,
        "min": null,
        "name": "author_id",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "uuid",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "VersionStartDate",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "versionStartDate",
        "max": null,
        "min": null,
        "name": "version_start_date",
        "nullable": false,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "timestamp",
      },
      {
        "arrayType": null,
        "collation": null,
        "comment": null,
        "computed": null,
        "decorator": "VersionEndDate",
        "default": null,
        "embedded": null,
        "encrypted": null,
        "enum": null,
        "hideOn": [],
        "key": "versionEndDate",
        "max": null,
        "min": null,
        "name": "version_end_date",
        "nullable": true,
        "order": null,
        "precision": null,
        "readonly": false,
        "scale": null,
        "schema": null,
        "transform": null,
        "type": "timestamp",
      },
    ],
    "filters": [],
    "primaryKeys": [
      "id",
    ],
    "relations": [],
  },
  "include": {
    "relation": "posts",
    "required": false,
    "select": null,
    "strategy": "query",
    "where": null,
  },
  "params": [
    "uuid-1",
  ],
  "relation": {
    "findKeys": {
      "authorId": "id",
    },
    "foreignConstructor": [Function],
    "foreignKey": "author",
    "joinKeys": null,
    "joinTable": null,
    "key": "posts",
    "options": {},
    "orderBy": null,
    "type": "OneToMany",
  },
  "text": "SELECT "id", "title", "author_id", "version_start_date", "version_end_date" FROM "app"."VersionedPost" WHERE "author_id" IN ($1) AND "version_end_date" IS NULL",
}
`;
